Fix spacing on file tree

--- a/src/renderer/components/collection-list/collection-list.scss
+++ b/src/renderer/components/collection-list/collection-list.scss
@@ -4,7 +4,7 @@
         margin-left: -24px;
         ul {
             padding-left: 24px;
-            margin-top: 0px;
+            margin-top: 8px;
             margin-left: 0px;
             list-style: none;
         }
